Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -1566,7 +1566,7 @@ i, .btn .show-max {
 .msg-frame .icon-block-img img{
     line-height: 100%;
     margin: 0 0 21px 0 !important;
-    width: auto !important;
+    width: 100% !important;
     height: auto !important;
     max-width: 377px;
     border-radius: 0 !important;
